// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/skeleton/demo/active.tsx extend context correctly 1`] = `
<div
  class="g-skeleton g-skeleton-active css-var-test-id"
>
  <div
    class="g-skeleton-section"
  >
    <h3
      class="g-skeleton-title"
      style="width: 38%;"
    />
    <ul
      class="g-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width: 61%;"
      />
    </ul>
  </div>
</div>
`;

exports[`renders components/skeleton/demo/active.tsx extend context correctly 2`] = `[]`;

exports[`renders components/skeleton/demo/basic.tsx extend context correctly 1`] = `
<div
  class="g-skeleton css-var-test-id"
>
  <div
    class="g-skeleton-section"
  >
    <h3
      class="g-skeleton-title"
      style="width: 38%;"
    />
    <ul
      class="g-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width: 61%;"
      />
    </ul>
  </div>
</div>
`;

exports[`renders components/skeleton/demo/basic.tsx extend context correctly 2`] = `[]`;

exports[`renders components/skeleton/demo/children.tsx extend context correctly 1`] = `
<div
  class="g-space g-space-vertical css-var-test-id"
  style="column-gap: 16px; row-gap: 16px; width: 100%;"
>
  <div
    class="g-space-item"
  >
    <h4
      style="margin-bottom: 16px;"
    >
      Ant Design, a design language
    </h4>
    <p>
      We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
    </p>
  </div>
  <div
    class="g-space-item"
  >
    <button
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      type="button"
    >
      <span>
        Show Skeleton
      </span>
    </button>
  </div>
</div>
`;

exports[`renders components/skeleton/demo/children.tsx extend context correctly 2`] = `[]`;

exports[`renders components/skeleton/demo/complex.tsx extend context correctly 1`] = `
<div
  class="g-skeleton g-skeleton-with-avatar css-var-test-id"
>
  <div
    class="g-skeleton-header"
  >
    <span
      class="g-skeleton-avatar g-skeleton-avatar-lg g-skeleton-avatar-circle"
    />
  </div>
  <div
    class="g-skeleton-section"
  >
    <h3
      class="g-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="g-skeleton-paragraph"
    >
      <li />
      <li />
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`renders components/skeleton/demo/complex.tsx extend context correctly 2`] = `[]`;

exports[`renders components/skeleton/demo/componentToken.tsx extend context correctly 1`] = `
<div
  class="g-skeleton g-skeleton-active css-var-test-id"
>
  <div
    class="g-skeleton-section"
  >
    <h3
      class="g-skeleton-title"
      style="width: 38%;"
    />
    <ul
      class="g-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width: 61%;"
      />
    </ul>
  </div>
</div>
`;

exports[`renders components/skeleton/demo/componentToken.tsx extend context correctly 2`] = `[]`;

exports[`renders components/skeleton/demo/element.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-gap-medium g-flex-vertical"
>
  <div
    class="g-space g-space-horizontal g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-test-id"
  >
    <div
      class="g-space-item"
    >
      <div
        class="g-skeleton g-skeleton-element css-var-test-id"
      >
        <span
          class="g-skeleton-button"
        />
      </div>
    </div>
    <div
      class="g-space-item"
    >
      <div
        class="g-skeleton g-skeleton-element css-var-test-id"
      >
        <span
          class="g-skeleton-avatar g-skeleton-avatar-circle"
        />
      </div>
    </div>
    <div
      class="g-space-item"
    >
      <div
        class="g-skeleton g-skeleton-element css-var-test-id"
      >
        <span
          class="g-skeleton-input"
        />
      </div>
    </div>
  </div>
  <div
    class="g-skeleton g-skeleton-element css-var-test-id"
  >
    <span
      class="g-skeleton-button"
    />
  </div>
  <div
    class="g-skeleton g-skeleton-element css-var-test-id"
  >
    <span
      class="g-skeleton-input"
    />
  </div>
  <div
    class="g-space g-space-horizontal g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-test-id"
  >
    <div
      class="g-space-item"
    >
      <div
        class="g-skeleton g-skeleton-element css-var-test-id"
      >
        <div
          class="g-skeleton-image"
        >
          <svg
            class="g-skeleton-image-svg"
            viewBox="0 0 1098 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Image placeholder
            </title>
            <path
              class="g-skeleton-image-path"
              d="M365.7 329.1q0 45.8-32 77.7t-77.7 32-77.7-32-32-77.7 32-77.6 77.7-32 77.7 32 32 77.6M951 548.6v256H146.3V694.9L329 512l91.5 91.4L713 311zm54.8-402.3H91.4q-7.4 0-12.8 5.4T73 164.6v694.8q0 7.5 5.5 12.9t12.8 5.4h914.3q7.5 0 12.9-5.4t5.4-12.9V164.6q0-7.5-5.4-12.9t-12.9-5.4m91.4 18.3v694.8q0 37.8-26.8 64.6t-64.6 26.9H91.4q-37.7 0-64.6-26.9T0 859.4V164.6q0-37.8 26.8-64.6T91.4 73h914.3q37.8 0 64.6 26.9t26.8 64.6"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="g-space-item"
    >
      <div
        class="g-skeleton g-skeleton-element css-var-test-id"
      >
        <div
          class="g-skeleton-node"
          style="width: 160px;"
        />
      </div>
    </div>
    <div
      class="g-space-item"
    >
      <div
        class="g-skeleton g-skeleton-element css-var-test-id"
      >
        <div
          class="g-skeleton-node"
        >
          <span
            aria-label="dot-chart"
            class="gicon gicon-dot-chart"
            role="img"
            style="font-size: 40px; color: rgb(191, 191, 191);"
          >
            <svg
              aria-hidden="true"
              data-icon="dot-chart"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M888 792H200V168c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v688c0 4.4 3.6 8 8 8h752c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM288 604a64 64 0 10128 0 64 64 0 10-128 0zm118-224a48 48 0 1096 0 48 48 0 10-96 0zm158 228a96 96 0 10192 0 96 96 0 10-192 0zm148-314a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-divider css-var-test-id g-divider-horizontal g-divider-rail"
    role="separator"
  />
  <form
    class="g-form g-form-inline css-var-test-id g-form-css-var"
    style="margin: 16px 0px;"
  >
    <div
      class="g-space g-space-horizontal g-space-align-center css-var-test-id"
      style="flex-wrap: wrap; column-gap: 16px; row-gap: 16px;"
    >
      <div
        class="g-space-item"
      >
        <div
          class="g-form-item css-var-test-id g-form-css-var g-form-item-inline"
        >
          <div
            class="g-row g-form-item-row css-var-test-id"
          >
            <div
              class="g-col g-form-item-label css-var-test-id"
            >
              <label
                class=""
                title="Active"
              >
                Active
              </label>
            </div>
            <div
              class="g-col g-form-item-control css-var-test-id"
            >
              <div
                class="g-form-item-control-input"
              >
                <div
                  class="g-form-item-control-input-content"
                >
                  <button
                    aria-checked="false"
                    class="g-switch css-var-test-id"
                    role="switch"
                    type="button"
                  >
                    <div
                      class="g-switch-handle"
                    />
                    <span
                      class="g-switch-inner"
                    >
                      <span
                        class="g-switch-inner-checked"
                      />
                      <span
                        class="g-switch-inner-unchecked"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="g-space-item"
      >
        <div
          class="g-form-item css-var-test-id g-form-css-var g-form-item-inline"
        >
          <div
            class="g-row g-form-item-row css-var-test-id"
          >
            <div
              class="g-col g-form-item-label css-var-test-id"
            >
              <label
                class=""
                title="Button and Input Block"
              >
                Button and Input Block
              </label>
            </div>
            <div
              class="g-col g-form-item-control css-var-test-id"
            >
              <div
                class="g-form-item-control-input"
              >
                <div
                  class="g-form-item-control-input-content"
                >
                  <button
                    aria-checked="false"
                    class="g-switch css-var-test-id"
                    role="switch"
                    type="button"
                  >
                    <div
                      class="g-switch-handle"
                    />
                    <span
                      class="g-switch-inner"
                    >
                      <span
                        class="g-switch-inner-checked"
                      />
                      <span
                        class="g-switch-inner-unchecked"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="g-space-item"
      >
        <div
          class="g-form-item css-var-test-id g-form-css-var g-form-item-inline"
        >
          <div
            class="g-row g-form-item-row css-var-test-id"
          >
            <div
              class="g-col g-form-item-label css-var-test-id"
            >
              <label
                class=""
                title="Size"
              >
                Size
              </label>
            </div>
            <div
              class="g-col g-form-item-control css-var-test-id"
            >
              <div
                class="g-form-item-control-input"
              >
                <div
                  class="g-form-item-control-input-content"
                >
                  <div
                    class="g-radio-group g-radio-group-outline css-var-test-id g-radio-css-var"
                    role="radiogroup"
                  >
                    <label
                      class="g-radio-button-wrapper g-radio-button-wrapper-in-form-item css-var-test-id g-radio-css-var"
                    >
                      <span
                        class="g-radio-button"
                      >
                        <input
                          class="g-radio-button-input"
                          name="test-id"
                          type="radio"
                          value="large"
                        />
                      </span>
                      <span
                        class="g-radio-button-label"
                      >
                        Large
                      </span>
                    </label>
                    <label
                      class="g-radio-button-wrapper g-radio-button-wrapper-checked g-radio-button-wrapper-in-form-item css-var-test-id g-radio-css-var"
                    >
                      <span
                        class="g-radio-button g-radio-button-checked"
                      >
                        <input
                          checked=""
                          class="g-radio-button-input"
                          name="test-id"
                          type="radio"
                          value="medium"
                        />
                      </span>
                      <span
                        class="g-radio-button-label"
                      >
                        Medium
                      </span>
                    </label>
                    <label
                      class="g-radio-button-wrapper g-radio-button-wrapper-in-form-item css-var-test-id g-radio-css-var"
                    >
                      <span
                        class="g-radio-button"
                      >
                        <input
                          class="g-radio-button-input"
                          name="test-id"
                          type="radio"
                          value="small"
                        />
                      </span>
                      <span
                        class="g-radio-button-label"
                      >
                        Small
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="g-space-item"
      >
        <div
          class="g-form-item css-var-test-id g-form-css-var g-form-item-inline"
        >
          <div
            class="g-row g-form-item-row css-var-test-id"
          >
            <div
              class="g-col g-form-item-label css-var-test-id"
            >
              <label
                class=""
                title="Button Shape"
              >
                Button Shape
              </label>
            </div>
            <div
              class="g-col g-form-item-control css-var-test-id"
            >
              <div
                class="g-form-item-control-input"
              >
                <div
                  class="g-form-item-control-input-content"
                >
                  <div
                    class="g-radio-group g-radio-group-outline css-var-test-id g-radio-css-var"
                    role="radiogroup"
                  >
                    <label
                      class="g-radio-button-wrapper g-radio-button-wrapper-checked g-radio-button-wrapper-in-form-item css-var-test-id g-radio-css-var"
                    >
                      <span
                        class="g-radio-button g-radio-button-checked"
                      >
                        <input
                          checked=""
                          class="g-radio-button-input"
                          name="test-id"
                          type="radio"
                          value="default"
                        />
                      </span>
                      <span
                        class="g-radio-button-label"
                      >
                        Default
                      </span>
                    </label>
                    <label
                      class="g-radio-button-wrapper g-radio-button-wrapper-in-form-item css-var-test-id g-radio-css-var"
                    >
                      <span
                        class="g-radio-button"
                      >
                        <input
                          class="g-radio-button-input"
                          name="test-id"
                          type="radio"
                          value="square"
                        />
                      </span>
                      <span
                        class="g-radio-button-label"
                      >
                        Square
                      </span>
                    </label>
                    <label
                      class="g-radio-button-wrapper g-radio-button-wrapper-in-form-item css-var-test-id g-radio-css-var"
                    >
                      <span
                        class="g-radio-button"
                      >
                        <input
                          class="g-radio-button-input"
                          name="test-id"
                          type="radio"
                          value="round"
                        />
                      </span>
                      <span
                        class="g-radio-button-label"
                      >
                        Round
                      </span>
                    </label>
                    <label
                      class="g-radio-button-wrapper g-radio-button-wrapper-in-form-item css-var-test-id g-radio-css-var"
                    >
                      <span
                        class="g-radio-button"
                      >
                        <input
                          class="g-radio-button-input"
                          name="test-id"
                          type="radio"
                          value="circle"
                        />
                      </span>
                      <span
                        class="g-radio-button-label"
                      >
                        Circle
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="g-space-item"
      >
        <div
          class="g-form-item css-var-test-id g-form-css-var g-form-item-inline"
        >
          <div
            class="g-row g-form-item-row css-var-test-id"
          >
            <div
              class="g-col g-form-item-label css-var-test-id"
            >
              <label
                class=""
                title="Avatar Shape"
              >
                Avatar Shape
              </label>
            </div>
            <div
              class="g-col g-form-item-control css-var-test-id"
            >
              <div
                class="g-form-item-control-input"
              >
                <div
                  class="g-form-item-control-input-content"
                >
                  <div
                    class="g-radio-group g-radio-group-outline css-var-test-id g-radio-css-var"
                    role="radiogroup"
                  >
                    <label
                      class="g-radio-button-wrapper g-radio-button-wrapper-in-form-item css-var-test-id g-radio-css-var"
                    >
                      <span
                        class="g-radio-button"
                      >
                        <input
                          class="g-radio-button-input"
                          name="test-id"
                          type="radio"
                          value="square"
                        />
                      </span>
                      <span
                        class="g-radio-button-label"
                      >
                        Square
                      </span>
                    </label>
                    <label
                      class="g-radio-button-wrapper g-radio-button-wrapper-checked g-radio-button-wrapper-in-form-item css-var-test-id g-radio-css-var"
                    >
                      <span
                        class="g-radio-button g-radio-button-checked"
                      >
                        <input
                          checked=""
                          class="g-radio-button-input"
                          name="test-id"
                          type="radio"
                          value="circle"
                        />
                      </span>
                      <span
                        class="g-radio-button-label"
                      >
                        Circle
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`renders components/skeleton/demo/element.tsx extend context correctly 2`] = `[]`;

exports[`renders components/skeleton/demo/list.tsx extend context correctly 1`] = `
Array [
  <button
    aria-checked="false"
    class="g-switch css-var-test-id"
    role="switch"
    style="margin-bottom: 16px;"
    type="button"
  >
    <div
      class="g-switch-handle"
    />
    <span
      class="g-switch-inner"
    >
      <span
        class="g-switch-inner-checked"
      />
      <span
        class="g-switch-inner-unchecked"
      />
    </span>
  </button>,
  <div
    class="g-list g-list-vertical g-list-lg g-list-split css-var-test-id"
  >
    <div
      aria-busy="false"
      aria-live="polite"
      class="g-spin css-var-test-id"
    >
      <div
        class="g-spin-container"
      >
        <ul
          class="g-list-items g-list-container css-var-test-id"
        >
          <li
            class="g-list-item g-list-item-no-flex"
          >
            <div
              class="g-skeleton g-skeleton-with-avatar g-skeleton-active css-var-test-id"
            >
              <div
                class="g-skeleton-header"
              >
                <span
                  class="g-skeleton-avatar g-skeleton-avatar-lg g-skeleton-avatar-circle"
                />
              </div>
              <div
                class="g-skeleton-section"
              >
                <h3
                  class="g-skeleton-title"
                  style="width: 50%;"
                />
                <ul
                  class="g-skeleton-paragraph"
                >
                  <li />
                  <li />
                </ul>
              </div>
            </div>
          </li>
          <li
            class="g-list-item g-list-item-no-flex"
          >
            <div
              class="g-skeleton g-skeleton-with-avatar g-skeleton-active css-var-test-id"
            >
              <div
                class="g-skeleton-header"
              >
                <span
                  class="g-skeleton-avatar g-skeleton-avatar-lg g-skeleton-avatar-circle"
                />
              </div>
              <div
                class="g-skeleton-section"
              >
                <h3
                  class="g-skeleton-title"
                  style="width: 50%;"
                />
                <ul
                  class="g-skeleton-paragraph"
                >
                  <li />
                  <li />
                </ul>
              </div>
            </div>
          </li>
          <li
            class="g-list-item g-list-item-no-flex"
          >
            <div
              class="g-skeleton g-skeleton-with-avatar g-skeleton-active css-var-test-id"
            >
              <div
                class="g-skeleton-header"
              >
                <span
                  class="g-skeleton-avatar g-skeleton-avatar-lg g-skeleton-avatar-circle"
                />
              </div>
              <div
                class="g-skeleton-section"
              >
                <h3
                  class="g-skeleton-title"
                  style="width: 50%;"
                />
                <ul
                  class="g-skeleton-paragraph"
                >
                  <li />
                  <li />
                </ul>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/skeleton/demo/list.tsx extend context correctly 2`] = `
[
  "Warning: [antd: List] The \`List\` component is deprecated. And will be removed in next major version.",
]
`;

exports[`renders components/skeleton/demo/style-class.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-gap-medium"
>
  <div
    class="g-skeleton g-skeleton-with-avatar acss-1nr40md css-var-test-id"
  >
    <div
      class="acss-wwk8k0 g-skeleton-header"
    >
      <span
        class="g-skeleton-avatar g-skeleton-avatar-lg g-skeleton-avatar-square"
        style="border: 1px solid rgb(170, 170, 170);"
      />
    </div>
    <div
      class="g-skeleton-section"
    >
      <h3
        class="g-skeleton-title"
        style="border: 1px solid rgb(170, 170, 170);"
      />
    </div>
  </div>
  <div
    class="g-skeleton g-skeleton-active acss-1nr40md css-var-test-id"
    style="border: 1px solid rgba(229, 243, 254, 0.3);"
  >
    <div
      class="g-skeleton-section"
    >
      <h3
        class="g-skeleton-title"
        style="width: 38%; background-color: rgba(229, 243, 254, 0.5); height: 20px; border-radius: 20px;"
      />
      <ul
        class="g-skeleton-paragraph acss-7yt14g"
      >
        <li />
        <li />
        <li
          style="width: 61%;"
        />
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders components/skeleton/demo/style-class.tsx extend context correctly 2`] = `[]`;
